Fixed text wrapping; CSS file comments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,9 +74,9 @@ p {
 
 .float-right {
     float: right;
-    margin-left: 25px;
 }
 
+/* Begin benefits sidebar style */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -103,7 +103,9 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
+/* End benefits sidebar style */
 
+/* Begin value prop content style */
 .value-prop-section {
     width: 75%;
     display: inline-block;
@@ -124,6 +126,7 @@ p {
     float: left;
 }
 
+/* The following IDs added in order to appropriately position the "Online Reputation Management" block */
 #online-reputation-management-img {
     float: right;
 }
@@ -133,9 +136,9 @@ p {
 }
 
 .value-prop-content {
-    padding: 0px 0px 0px 35px;
+    padding: 0px 0px 0px 25px;
     float: left;
-    width: 70%;
+    width: 75%;
     text-align: left;
 }
 
@@ -143,7 +146,10 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
+/* End benefits sidebar style */
 
+
+/* Begin footer style */
 .footer {
     padding: 30px;
     clear: both;
